# streamlit_on_lambda

./: .gitignore  README.md  pyproject.toml  template.yaml
app/: Dockerfile  main.py  requirements.txt
