[tool.poetry]
name = "streamlit-on-lambda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "streamlit_on_lambda"}]

[tool.poetry.dependencies]
python = "3.8.12"
streamlit = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
